2014-05-14  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/nettle-pbkdf2-test: Avoid the bash construction
	${#foo}.

	* getopt.c: Copied from glibc tree, tag glibc-2.19.
	* getopt.h: Likewise.
	* getopt1.c: Likewise.
	* getopt_int.h: New file, also copied from glibc.
	* Makefile.in (DISTFILES): Added getopt_int.h.

2014-05-09  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c: Updated, use version from gmp-6.0.0.
	* mini-gmp.h: Likewise.

	* testsuite/Makefile.in (all): Drop dependency on $(TARGETS), to
	delay building of test programs until make check.

2014-05-08  Niels Möller  <nisse@lysator.liu.se>

	* nettle.texinfo (nettle_aead abstraction): Document nettle_aead.

	* Makefile.in (nettle_SOURCES): Added nettle-meta-aeads.c.
	* nettle-meta.h (nettle_aeads): Declare array.
	* nettle-meta-aeads.c (nettle_aeads): New file, new array.
	* testsuite/meta-aead-test.c: New test case.
	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Added
	meta-aead-test.c.

	* aclocal.m4 (GMP_PROG_CC_FOR_BUILD): If CC_FOR_BUILD is gcc, add
	-O option. This makes eccdata twice as fast.

2014-05-06  Niels Möller  <nisse@lysator.liu.se>

	* nettle.texinfo: Document SHA3 and ChaCha-Poly1305 as
	experimental.

2014-05-05  Niels Möller  <nisse@lysator.liu.se>

	* nettle.texinfo (POLY1305): Document poly1305-aes.
	(Authenticated encryption): Move AEAD algorithms to their own
	section.
	(RSA, DSA, ECDSA): Change some subsections to subsubsections.
	(ChaCha-Poly1305): Document ChaCha-Poly1305.

2014-05-04  Niels Möller  <nisse@lysator.liu.se>

	* nettle.texinfo (DSA): Document new DSA interface.
	(Salsa20): Update salsa20 docs.
	(ChaCha): Document ChaCha.

2014-05-03  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac: Check for SIZEOF_SIZE_T.
	* ccm.c (ccm_set_nonce): Skip code for 64-bit encoding when size_t
	is only 32 bits.

	* nettle.texinfo (CCM): Document new ccm macros and constants.
	Describe ccm restrictions.

	* ccm.h (CCM_DIGEST_SIZE): New constant.
